# article_hub_api

./: .env.sample  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
article_hub/: apps.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
articles/: models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_articles_analysis.py
logs/: logs.csv
mongo_migrations/admin/: 0001_initial.py
mongo_migrations/auth/: 0001_initial.py
mongo_migrations/contenttypes/: 0001_initial.py
mongo_migrations/django_celery_results/: 0001_initial.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
